--- a/templates/search.html
+++ b/templates/search.html
@@ -5,9 +5,8 @@
 <div class="col-sm-12">
     <form action="{{ url_for('home') }}" method="post" autocomplete="off" >
       <div class="input-group" style="padding-bottom:20px;">
-          <div class="input-group-btn">
-            <button id="searchButton" type="submit" class="btn btn-danger" style="background-color:#252FA5;border-color:#252FA5"> <i class="fa fa-search"> </i> </button>
-          </div>
+          <button id="searchButton" type="submit" class="btn btn-custom"> <i class="fa fa-search" style="color:white"> </i> </button>
+
           <input role="form" name="searchInput" id="autocomplete" type="text" placeholder="Zoeken..." aria-describedby="button-addon8" class="form-control">
 
         </div>
