--- a/templates/products.html
+++ b/templates/products.html
@@ -6,14 +6,15 @@
     <h3>Filter</h3>
     <form method="post" action="/{{product_group}}">
       <div class="d-flex justify-content-center">
-        <a href="{{ url_for('product_group', product_group=product_group) }}" type="button" class="btn btn-filter ">Reset</a>
-        <input role = "form" type="submit" class="btn btn-filter" value="Toepassen"/>
+        <a href="{{ url_for('product_group', product_group=product_group) }}" type="button" class="btn btn-filter " >Reset</a>
+        <!--<input role = "form" type="submit" class="btn btn-filter" value="Toepassen" style="background-color:#20295b;border-color:#20295b;"/>-->
+        <button type="submit" class="btn btn-filter">Toepassen</button>
       </div>
       {% for el in filter.keys() %}
         {% if el in ['WWAN (4G)', 'GPS', 'WiFi', 'Bluetooth', 'Freezer', 'Cordless'] %}
         <div>
           <br/>
-          <a data-bs-toggle="collapse" href="#{{el|replace(' ', '')|replace('(','')|replace(')','')}}" aria-expanded="false" aria-controls="{{el|replace(' ', '')|replace('(','')|replace(')','')}}" style="color: black">
+          <a data-toggle="collapse" href="#{{el|replace(' ', '')|replace('(','')|replace(')','')}}" aria-expanded="false" aria-controls="{{el|replace(' ', '')|replace('(','')|replace(')','')}}" style="color: black">
           <h6 class="p-1 border-bottom">{{ el }}</h6></a>
             {% for c in filter[el] %}
             <div class="form-check collapse multi-collapse" id="{{el|replace(' ', '')|replace('(','')|replace(')','')}}">
@@ -39,7 +40,7 @@
         {% elif el in ['Printbreedte', 'Mediabreedte', 'Snelheid'] %}
         <div>
           <br/>
-          <a data-bs-toggle="collapse" href="#{{el|replace(' ', '')}}" aria-expanded="false" aria-controls="{{el|replace(' ', '')}}" style="color: black">
+          <a data-toggle="collapse" href="#{{el|replace(' ', '')}}" aria-expanded="false" aria-controls="{{el|replace(' ', '')}}" style="color: black">
           <h6 class="p-1 border-bottom">{{ el }}</h6></a>
             {% for c in filter[el] %}
             <div class="collapse multi-collapse" id="{{el|replace(' ', '')}}">
@@ -54,7 +55,7 @@
         {% else %}
         <div>
           <br/>
-          <a data-bs-toggle="collapse" href="#{{el|replace(' ', '')}}" aria-expanded="false" aria-controls="{{el|replace(' ', '')}}" style="color: black">
+          <a data-toggle="collapse" href="#{{el|replace(' ', '')}}" aria-expanded="false" aria-controls="{{el|replace(' ', '')}}" style="color: black">
           <h6 class="p-1 border-bottom">{{ el }}</h6></a>
             {% for c in filter[el] %}
             <div class="form-check collapse multi-collapse" id="{{el|replace(' ', '')}}">
