--- a/templates/item.html
+++ b/templates/item.html
@@ -35,7 +35,7 @@
                     <span class="iconify" data-icon="material-symbols:keyboard-arrow-right" style="display: inline-block; font-size:20px;"></span>
                   </a>
                   {% if item.iloc[0]['accessories'] %}
-                  <a href="{{ item.iloc[0]['link'] }}" class="btn btn-custom" target="_blank" style="padding-left: 7px; padding-right: 5px; margin:6px; width:140px">
+                  <a href="{{ item.iloc[0]['accessories'] }}" class="btn btn-custom" target="_blank" style="padding-left: 7px; padding-right: 5px; margin:6px; width:140px">
                     <span> ACCESOIRES </span>
                     &nbsp;
                     <span class="iconify" data-icon="material-symbols:keyboard-arrow-right" style="display: inline-block; font-size:20px"></span>
